--- a/sass/bright.bs2.scss
+++ b/sass/bright.bs2.scss
@@ -34,7 +34,10 @@
 .nav .btn-toolbar {
   margin-top: 6px;
   margin-bottom: 4px;
+}
 
+.nav .btn-toolbar .btn-group {
+  margin-top: 0;
 }
 
 .navbar-inner {
