--- a/templates/DebugMessage.html
+++ b/templates/DebugMessage.html
@@ -1,5 +1,5 @@
 [[#br.request.isRest]]
-DEBUG: [[&debug.message]]
+DEBUG: <pre>[[&debug.message]]</pre>
 [[/br.request.isRest]]
 
 [[^br.request.isRest]]
