--- a/sass/bright.scss
+++ b/sass/bright.scss
@@ -10,7 +10,12 @@
 .right-aligned {
   text-align: right !important;
 }
-a.justified, select.justified, textarea.justified, audio.justified, input.justified, div.justified {
+a.justified,
+select.justified,
+textarea.justified,
+audio.justified,
+input.justified,
+div.justified {
   width: 100%;
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -18,9 +23,16 @@ a.justified, select.justified, textarea.justified, audio.justified, input.justif
   -ms-box-sizing: border-box;
   margin-top: 2px;
   margin-bottom: 2px;
+  // min-height: 30px;
+  // line-height: 30px;
 }
-input.justified, div.justified {
-  height: 2em;
+select.justified,
+textarea.justified,
+audio.justified,
+input.justified,
+div.justified {
+  min-height: 30px;
+  line-height: 1em;
 }
 td.optimal-width, th.optimal-width {
   width:10px;
@@ -31,7 +43,6 @@ span.required {
   margin-right: 5px;
   font-weight: bold;
 }
-
 .br-template {
   display: none;
 }
@@ -53,7 +64,8 @@ textarea.br-justified {
   margin-top: 2px;
   margin-bottom: 2px;
 }
-input.br-justified, div.br-justified {
+input.br-justified,
+div.br-justified {
   width: 100%;
   height: 2em;
   box-sizing: border-box;
@@ -81,7 +93,8 @@ a.br-justified {
   margin-top: 2px;
   margin-bottom: 2px;
 }
-td.br-optimal-width, th.br-optimal-width {
+td.br-optimal-width,
+th.br-optimal-width {
   width:10px;
   white-space:nowrap;
 }
@@ -171,8 +184,6 @@ div.br-editable, span.br-editable {
   margin: -1px;
   border-radius: 2px;
 }
-
-
 .br-uppercase,
 .uppercase {
   text-transform:uppercase;
@@ -185,7 +196,6 @@ div.br-editable, span.br-editable {
 .capitalize {
   text-transform:capitalize;
 }
-
 .br-pager-control .br-pager-pager-container,
 .br-pager-control .br-pager-selection-container,
 .br-pager-control .br-pager-page-size-container,
@@ -194,7 +204,6 @@ div.br-editable, span.br-editable {
 .pager-control .pager-page-size-container {
   margin-bottom: 8px;
 }
-
 .br-pager-control .pbr-ager-nav-element,
 .br-pager-control .br-pager-size-element,
 .pager-control .pager-nav-element,
@@ -203,7 +212,6 @@ div.br-editable, span.br-editable {
   padding-left: 3px;
   padding-right: 3px;
 }
-
 .br-pager-control .br-pager-nav-element:hover,
 .br-pager-control .br-pager-size-element:hover,
 .pager-control .pager-nav-element:hover,
